fix: fix layout break caused by overflowing content on mobile

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ button {
 }
 
 button.light {
-  width: 23.8rem;
+  width: 100%;
   height: 3.25rem;
   border: none;
   border-radius: 1.75rem;
@@ -87,7 +87,7 @@ button.light:active {
 }
 
 button.dark {
-  width: 23.8rem;
+  width: 100%;
   height: 3.3rem;
   border: none;
   border-radius: 1.75rem;
@@ -110,7 +110,7 @@ footer {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 8.75rem;
+  height: 15.5%;
   background-color: #23272a;
 }
 
@@ -148,7 +148,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 26.6rem;
+  width: 100%;
   height: auto;
   padding: 0 1.5rem;
 }
@@ -166,8 +166,9 @@ footer {
 }
 
 .image-section {
-  width: 379px;
-  height: 252px;
+  align-self: center;
+  width: 326px;
+  height: auto;
 }
 
 .easy-find-section {
